# picotron

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: config-lab.html  dataset_format.md  index.html  native_model_audit.md  triton_kernels.md  verified_models.md
docs/assets/: config-lab.css  config-lab.js  site.css  site.js
examples/: _hf_model_verification.py  kaggle_demo_pretrain_sft_dpo.ipynb  sft_llama_style.py  sft_qwen3.py  sft_qwen3_5.py  verify_gemma_2.py  verify_llama_3_2.py  verify_mistral.py  verify_qwen2_5.py  verify_qwen3.py  verify_qwen3_5.py  verify_starcoder2.py
scripts/: dpo.py  grpo.py  sft.py  train.py
src/picotron/: __init__.py  cli.py  (+1 more)
tests/: config_factory.py  conftest.py  kaggle_demo_1B.ipynb  kaggle_demo_3_cell_sft.ipynb  kaggle_demo_52M_full_pipeline.ipynb  kaggle_demo_full.ipynb  kaggle_demo_smollm2_sft_dpo.ipynb  kaggle_demo_smollm2_sft_dpo_grpo.ipynb  kaggle_smoke_test.ipynb  kaggle_verify_triton_and_native_sft.ipynb  test_attention.py  test_auto_preprocess.py  test_checkpoint.py  test_cli.py  test_config.py  test_cudnn_benchmark.py  test_data.py  test_dataloader_perf.py  test_ddp.py  test_display.py  test_dpo.py  test_file_logger.py  test_gqa_sliding_window.py  test_gradient_checkpointing.py  test_grpo.py  test_hardware.py  test_hf_token.py  test_mla.py  test_model.py  test_moe.py  test_multi_dataset.py  test_nope.py  test_optional_kwargs_end_to_end.py  test_preprocess_data.py  test_rope.py  test_sft.py  test_sft_examples.py  test_streaming.py  test_torch_compile.py  test_train_loop.py  (+11 more)
tools/: preprocess_data.py
(+54 files in other folders)
