[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picotron"
version = "0.1.0"
description = "A correctness-first distributed LLM pretraining framework"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "PyYAML",
    "rich",
    "tqdm",
    "safetensors",
    "numpy",
    "datasets",
    "transformers",
]

[project.scripts]
picotron = "picotron.cli:main"
picotron-sft = "picotron_sft.cli:main"
picotron-dpo = "picotron_dpo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["picotron*", "picotron_sft*", "picotron_dpo*"]
